Added expandable list for inventory

--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -6,11 +6,11 @@
 
     
     <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/inventoryItemGroup" android:layout_weight="1">
-        <ListView
+        <ExpandableListView
             android:id="@+id/inventoryListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        </ListView>
+        </ExpandableListView>
     </LinearLayout>
 
     <LinearLayout
