--- a/CHIPSApp/res/layout/food_group.xml
+++ b/CHIPSApp/res/layout/food_group.xml
@@ -4,6 +4,6 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft">
-    <TextView android:text="TextView" android:id="@+id/groupName" android:layout_height="match_parent" android:layout_width="match_parent"></TextView>
+  android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" android:minHeight="32dp">
+    <TextView android:text="TextView" android:id="@+id/groupName" android:layout_width="match_parent" android:textSize="15dp" android:textStyle="bold" android:layout_height="wrap_content"></TextView>
 </LinearLayout>
