Added quantity to group layouts

--- a/CHIPSApp/res/layout/food_group.xml
+++ b/CHIPSApp/res/layout/food_group.xml
@@ -6,4 +6,5 @@
   android:layout_height="match_parent"
   android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" android:minHeight="32dp">
     <TextView android:text="TextView" android:id="@+id/groupName" android:layout_width="match_parent" android:textSize="15dp" android:textStyle="bold" android:layout_height="wrap_content"></TextView>
+    <TextView android:layout_height="wrap_content" android:text="TextView" android:id="@+id/groupQuantity" android:gravity="right" android:layout_width="match_parent"></TextView>
 </LinearLayout>
