Added local update functionality for inventory

--- a/CHIPSApp/res/layout/food_child.xml
+++ b/CHIPSApp/res/layout/food_child.xml
@@ -21,12 +21,12 @@
             <TextView android:layout_width="wrap_content" android:text="@string/childFatTitle" android:id="@+id/childFatTitle" android:layout_height="wrap_content" android:textStyle="bold"></TextView>
             <TextView android:layout_width="wrap_content" android:text="TextView" android:id="@+id/childFatDisplay" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center|right"></TextView>
         </TableRow>
-        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
-            <TextView android:layout_height="wrap_content" android:textStyle="bold" android:layout_width="wrap_content" android:id="@+id/quantityTitle" android:text="@string/childQuantityTitle"></TextView>
+        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childQuantityRow">
+            <TextView android:layout_height="wrap_content" android:textStyle="bold" android:layout_width="wrap_content" android:text="@string/childQuantityTitle" android:id="@+id/childQuantityTitle"></TextView>
             <EditText android:layout_width="match_parent" android:inputType="number" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/childQuantityEditText" android:gravity="right">
                 <requestFocus></requestFocus>
             </EditText>
-            <Button android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="wrap_content" android:text="@string/childUpdateQuantityButtonTitle"></Button>
+            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/childUpdateQuantityButtonTitle" android:id="@+id/childUpdateButton"></Button>
         </TableRow>
     </TableLayout>
     
