--- a/CHIPSApp/res/layout/login.xml
+++ b/CHIPSApp/res/layout/login.xml
@@ -6,7 +6,7 @@
   android:fillViewport="true">
   <RelativeLayout 
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content" android:background="#ffffff">
+  		android:layout_height="wrap_content" android:background="#000000">
   		
   		<!--  Header  Starts-->
   		<LinearLayout android:id="@+id/header"
@@ -26,7 +26,7 @@
   		<!-- Footer Start -->
   		<LinearLayout android:id="@+id/footer"
   				android:layout_width="fill_parent"
-  				android:layout_height="90dip"
+  				android:layout_height="72dip"
   				android:background="@layout/footer_repeat"
   				android:layout_alignParentBottom="true">
   		</LinearLayout>
@@ -43,7 +43,7 @@
 		  <!--  Email Label -->
 		  <TextView android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
+		  		android:textColor="#ffffff"
 		  		android:text="Email"/>
 		  <EditText android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
 		  <!--  Password Label -->
 		  <TextView android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
+		  		android:textColor="#ffffff"
 		  		android:text="Password"/>
 		  <EditText android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
 		  		android:text="New to CHIPS? Register here"
 		  		android:gravity="center"
 		  		android:textSize="20dip"
-		  		android:textColor="#0b84aa"/>
+		  		android:textColor="#ffffff"/>
 		    
 		</LinearLayout>
   		<!-- Login Form Ends --> 		
