--- a/CHIPSApp/res/layout/register.xml
+++ b/CHIPSApp/res/layout/register.xml
@@ -6,7 +6,7 @@
   android:fillViewport="true">
   <RelativeLayout 
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content" android:background="#fff">
+  		android:layout_height="wrap_content" android:background="#000000">
   		
   		<!--  Header  Starts-->
   		<LinearLayout android:id="@+id/header"
@@ -26,7 +26,7 @@
   		<!-- Footer Start -->
   		<LinearLayout android:id="@+id/footer"
   				android:layout_width="fill_parent"
-  				android:layout_height="90dip"
+  				android:layout_height="72dip"
   				android:background="@layout/footer_repeat"
   				android:layout_alignParentBottom="true">
   		</LinearLayout>
@@ -43,7 +43,7 @@
 		  <!-- Full Name Label -->
 		  <TextView android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
+		  		android:textColor="#ffffff"
 		  		android:text="Full Name"/>
 		  <EditText android:id="@+id/reg_fullname" 
 		  		android:layout_width="fill_parent"
@@ -54,7 +54,7 @@
 		  <!--  Email Label -->
 		  <TextView android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
+		  		android:textColor="#ffffff"
 		  		android:text="Email"/>
 		  <EditText android:id="@+id/reg_email" 
 		  		android:layout_width="fill_parent"
@@ -65,7 +65,7 @@
 		  <!-- Password Label -->
 		  <TextView android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
+		  		android:textColor="#ffffff"
 		  		android:text="Password"/>
 		  <EditText android:id="@+id/reg_password" 
 		        android:layout_width="fill_parent"
@@ -88,7 +88,7 @@
 		  		android:text="Already has account! Login here"
 		  		android:gravity="center"
 		  		android:textSize="20dip"
-		  		android:textColor="#025f7c"/>
+		  		android:textColor="#ffffff"/>
 		    
 		</LinearLayout>
   		<!-- Registration Form Ends -->
