more changes to add-food-to-favorites

--- a/CHIPSApp/res/layout/favorites.xml
+++ b/CHIPSApp/res/layout/favorites.xml
@@ -86,6 +86,7 @@
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_gravity="center_horizontal"
+        	android:onClick="saveFavoriteClicked"
         	android:layout_weight="1"
         	android:background="@android:color/transparent"
         	android:src="@drawable/save_button" />
