Passing from inventory list to current favorite meal list - rough draft

--- a/CHIPSApp/res/layout/add_food_to_favorite.xml
+++ b/CHIPSApp/res/layout/add_food_to_favorite.xml
@@ -9,12 +9,12 @@
     </LinearLayout>
     
     <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical" >
-        <ExpandableListView
+        <ListView
             android:id="@+id/addFavoriteMealListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" >
-        </ExpandableListView>
+        </ListView>
     </LinearLayout>
 
     
