Added checkable shopping list implementation

--- a/CHIPSApp/res/layout/shopping_list.xml
+++ b/CHIPSApp/res/layout/shopping_list.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical" >
 
     <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/shoppingListGroup" android:layout_weight="1">
-        <ListView
+        <ExpandableListView
             android:id="@+id/shoppingListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        </ListView>
+        </ExpandableListView>
     </LinearLayout>
 
     <LinearLayout
