--- a/CHIPSApp/res/layout/calendar_item.xml
+++ b/CHIPSApp/res/layout/calendar_item.xml
@@ -17,12 +17,12 @@
 		    android:textColor="#ffff00"
 		    >
 </TextView>
-<!--
+
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/date_logo"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 		android:src="@drawable/logo" 
-		android:visibility="invisible"/> -->
+		android:visibility="invisible"/>
 		
 </LinearLayout>
