--- a/CHIPSApp/res/layout/calendar.xml
+++ b/CHIPSApp/res/layout/calendar.xml
@@ -4,82 +4,39 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/header_calendar"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/header_background"
-    >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="left"
-    >
-
-<TextView  
-	android:id="@+id/previous_calendar" 
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:padding="5dp"
-    android:paddingLeft="5dp"
-    android:textSize="14sp"
-    android:textStyle="bold"
-    android:textColor="#000000"
-    android:gravity="center_horizontal"
-    android:text="&lt;&lt;" 
-    android:clickable="true"   
-    />
-</LinearLayout>
-<TextView  
-	android:id="@+id/title_calendar" 
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:padding="5dp"
-    android:paddingLeft="5dp"
-    android:textSize="14sp"
-    android:textStyle="bold"
-    android:textColor="#ffffff"
-    android:gravity="center_horizontal"
-    android:layout_toRightOf="@+id/previous_calendar"
-    
-    />
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="right"
-    android:layout_toRightOf="@+id/title_calendar"
-    >
-<TextView  
-	android:id="@+id/next_calendar" 
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:padding="5dp"
-    android:paddingLeft="5dp"
-    android:textSize="14sp"
-    android:textStyle="bold"
-    android:textColor="#000000"
-    android:gravity="center_horizontal"
-    android:text=">>"
-    android:clickable="true"
-    />
+	<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
+	
+		<Button android:id="@+id/Button03" android:background="#00000000" android:textColor="#ffffffff"
+		android:layout_height="50dip" android:text="&lt;" android:layout_alignParentLeft="true" android:layout_width="50dip"></Button>
+		
+		
+	    <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
+	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
+	    android:id="@+id/tv2" android:text="MM" android:textSize="18sp" android:textColor="#ffffffff"></TextView>
+	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
+	    android:id="@+id/month_tv"  android:layout_toRightOf="@+id/tv1" android:textSize="18sp" android:textColor="#ffffffff"></TextView>
+	    
+	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
+	    android:id="@+id/tv1" android:text="yyyy" android:layout_marginLeft="20dip" android:textSize="18sp" android:textColor="#ffffffff"></TextView>
+	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
+	    android:id="@+id/year_tv" android:textSize="18sp" android:textColor="#ffffffff"></TextView>
+	    </LinearLayout>
+		
+	    
+		<Button android:id="@+id/Button04" android:background="#00000000" android:textColor="#ffffffff"
+		android:layout_height="50dip" android:text="&gt;" android:layout_alignParentRight="true" android:layout_width="50dip"></Button>
+		
+	</RelativeLayout>
+	
+<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent">
+	<LinearLayout android:layout_width="fill_parent" android:layout_height="1px" android:background="#99999999"></LinearLayout>
+	
+	<LinearLayout android:id="@+id/calendar_lLayout" 
+	android:layout_width="wrap_content" android:layout_height="wrap_content">
+	</LinearLayout>
+	
+	<LinearLayout android:layout_height="1px" android:layout_width="fill_parent" android:background="#99999999"></LinearLayout>
 </LinearLayout>
 
-</RelativeLayout>
-
-<GridView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:horizontalSpacing="2dp"
-    android:numColumns="7"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="2dp" >
-</GridView>
-
 </LinearLayout>
+
