--- a/CHIPSApp/res/layout/meal_view_item.xml
+++ b/CHIPSApp/res/layout/meal_view_item.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent" android:orientation="vertical">
-    <TextView android:id="@+id/mealIngredientName" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
-    <TextView android:id="@+id/mealIngredientQuantity" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_gravity="right"></TextView>
+    <TextView android:id="@+id/mealIngredientName" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:textSize="14dp"></TextView>
+    <TextView android:id="@+id/mealIngredientQuantity" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_gravity="right" android:textStyle="bold" android:textSize="11dp"></TextView>
     
 </LinearLayout>
