renamed FavoritesActivity, created new Favorites hub

--- a/CHIPSApp/res/layout/favorites.xml
+++ b/CHIPSApp/res/layout/favorites.xml
@@ -22,7 +22,7 @@
             android:id="@+id/favoritesHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a Favorite Meal"
+            android:text="Your Favorite Meals"
             android:textAppearance="?android:attr/textAppearanceLarge" >
         </TextView>
 
@@ -82,14 +82,14 @@
         android:layout_alignParentBottom="true">
         
     	<ImageButton
-        	android:id="@+id/saveButton"
+        	android:id="@id/addButton"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_gravity="center_horizontal"
-        	android:onClick="saveFavoriteClicked"
+        	android:onClick="addFavoriteMealClicked"
         	android:layout_weight="1"
         	android:background="@android:color/transparent"
-        	android:src="@drawable/save_button" />
+        	android:src="@drawable/add_button" />
     
     </LinearLayout>
 
