--- a/CHIPSApp/res/layout/calendar_dlg.xml
+++ b/CHIPSApp/res/layout/calendar_dlg.xml
@@ -14,6 +14,13 @@
 	    android:layout_height="wrap_content"
 	    android:text="History"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />
+			
+		<TextView
+	    android:id="@+id/dia_textView2"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="DDD" />
+		
 	</LinearLayout>
 
 
