favorites - just needs website push

--- a/CHIPSApp/res/layout/add_meal_to_favorites.xml
+++ b/CHIPSApp/res/layout/add_meal_to_favorites.xml
@@ -65,7 +65,7 @@
         android:onClick="addFoodToFavoriteClicked" />
 
     <ExpandableListView
-        android:id="@+id/favoriteMealListView"
+        android:id="@+id/mealFoodsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" >
