--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -6,110 +6,20 @@
     
     <ScrollView
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" >
+		android:layout_height="fill_parent" android:layout_weight="1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" android:id="@+id/preferencesEditGroup" android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/textAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Age:"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <requestFocus />
-        </EditText>
-        
-		<TextView
-            android:id="@+id/textGender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gender:"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-		<Spinner
-		    android:id="@+id/spinnerGender"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content" />
-        
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-        
-        <TextView
-            android:id="@+id/textMealsVariability"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Meals Variability"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/textBreakfast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Breakfast"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <SeekBar
-            android:id="@+id/barBreakfast"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        
-		<TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/textLunch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lunch"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <SeekBar
-            android:id="@+id/barLunch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-            
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/textDinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dinner"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <SeekBar
-            android:id="@+id/barDinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/pickerTitleGroup">
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_weight="1" android:id="@+id/heightTitle" android:text="@string/heightTitle"></TextView>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/weightTitle" android:text="@string/weightTitle"></TextView>
+        </LinearLayout>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pickerGroup">
+            <com.customwidget.numberpicker.NumberPicker android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/heightPicker"></com.customwidget.numberpicker.NumberPicker>
+            <com.customwidget.numberpicker.NumberPicker android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/numberPicker1"></com.customwidget.numberpicker.NumberPicker>
+        </LinearLayout>
 
 
 
@@ -123,9 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:src="@drawable/save_button" />
+            android:src="@drawable/save_button" android:layout_weight="1"/>
     </LinearLayout>
 	
 	</LinearLayout>
