Added framework for accepting and rejecting

--- a/CHIPSApp/res/layout/meal_view.xml
+++ b/CHIPSApp/res/layout/meal_view.xml
@@ -3,13 +3,12 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent" android:id="@+id/OuterMealGroup" android:padding="10dp">
-    <ScrollView android:layout_above="@+id/buttonAccept" android:layout_below="@+id/mealTypeTextView" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/ingredientScroll">
+    <ScrollView android:layout_below="@+id/mealTypeTextView" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:id="@+id/ingredientScroll" android:layout_height="match_parent">
     
     <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:id="@+id/innerMealGroup">
         <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:id="@+id/mealIngredientGroup"></LinearLayout>
     </LinearLayout>
     </ScrollView>
-    <ImageButton android:layout_marginLeft="15dp" android:background="@android:color/transparent" android:layout_toLeftOf="@+id/buttonReject" android:layout_width="wrap_content" android:src="@drawable/check" android:layout_height="wrap_content" android:id="@+id/buttonAccept" android:layout_alignParentBottom="true" android:focusable="false"></ImageButton>
-    <ImageButton android:layout_alignBaseline="@+id/buttonAccept" android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/reject" android:layout_height="wrap_content" android:id="@+id/buttonReject" android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:focusable="false"></ImageButton>
+    
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mealTypeTextView" android:layout_alignParentTop="true" android:textStyle="bold" android:text="@string/mealViewDefault"></TextView>
 </RelativeLayout>
