--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -15,9 +15,9 @@
 	    android:id="@+id/gallery"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:spacing="10dp" android:padding="10dp"/>
-    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/modifyMealGroup" android:orientation="horizontal" android:gravity="right">
-        <ImageButton android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/check" android:layout_height="wrap_content" android:id="@+id/buttonAccept" android:focusable="false" android:onClick="acceptClicked"></ImageButton>
+	    android:spacing="10dp" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp"/>
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/modifyMealGroup" android:orientation="horizontal" android:gravity="right" android:paddingRight="10dp">
+        <ImageButton android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/check" android:layout_height="wrap_content" android:id="@+id/buttonAccept" android:focusable="false" android:onClick="acceptClicked" android:paddingRight="5dp"></ImageButton>
         <ImageButton android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/reject" android:layout_height="wrap_content" android:focusable="false" android:onClick="suggestAnotherClicked" android:id="@+id/buttonSuggestAnother"></ImageButton>
     </LinearLayout>
     <ImageButton android:src="@drawable/calendar_button" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/calendarButton" android:scaleType="fitCenter" android:background="@android:color/transparent" android:onClick="calendarClicked" android:layout_weight="1"></ImageButton>
