--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -19,6 +19,7 @@
     <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/modifyMealGroup" android:orientation="horizontal" android:gravity="right" android:paddingRight="10dp">
         <ImageButton android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/check" android:layout_height="wrap_content" android:id="@+id/buttonAccept" android:focusable="false" android:onClick="acceptClicked" android:paddingRight="5dp"></ImageButton>
         <ImageButton android:background="@android:color/transparent" android:layout_width="wrap_content" android:src="@drawable/reject" android:layout_height="wrap_content" android:focusable="false" android:onClick="suggestAnotherClicked" android:id="@+id/buttonSuggestAnother"></ImageButton>
+        <ImageButton android:background="@android:color/transparent" android:layout_height="wrap_content" android:id="@+id/imageButton1" android:layout_width="wrap_content" android:src="@drawable/customize"></ImageButton>
     </LinearLayout>
     <ImageButton android:src="@drawable/calendar_button" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/calendarButton" android:scaleType="fitCenter" android:background="@android:color/transparent" android:onClick="calendarClicked" android:layout_weight="1"></ImageButton>
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:id="@+id/applicationHubBottomButtonGroup" android:layout_weight="1">
